# convert-pubk-to-auto

./: Cargo.toml  README.md
src/: main.rs
