[package]
name = "pubkey-to-auto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.5.0"
structopt = "0.3.26"
base58 = "0.2.0"
blake2 = "0.10.6"
hex = "0.4.3"
clap = { version = "4.0", features = ["derive", "cargo"] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["json"] }
log = "0.4.21"
